test/chainsaw/authpolicy/auto_login_with_login_params/authpolicy-acr-values.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
spec:
  enabled: true
  oAuthCredentials:
    clientIDKey: CLIENT_ID
    clientSecretKey: CLIENT_SECRET
    secretRef: oauth-secret
  autoLogin:
    enabled: true
    loginPath: /login
    logoutPath: /logout
    redirectPath: /oauth2/callback
    scopes:
      - openid
    loginParams:
      acr_values: entraid
  audience:
    - entraid_server
  wellKnownURI: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
