test/chainsaw/authpolicy/auto_login_with_login_params/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: auto-login-with-login-params
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespaceTemplate:
    metadata:
      name: chainsaw-login-params
      labels:
        istio-injection: enabled
  steps:
    - try:
        - create:
            file: ../../../resources/skiperator/application-with-istio-mount.yaml
        - apply:
            file: ../../../resources/ingress/wildcard-ingress.yaml
        - create:
            file: ../../../resources/secret/oauth-secret.yaml
        - create:
            file: authpolicy-acr-values.yaml
        - script:
            content: sleep 14
        - script:
            content: |
              hurl --error-format long --insecure --test test-acr-values.hurl
        - apply:
            file: authpolicy-auth-details.yaml
        - script:
            content: |
              kubectl rollout restart deploy application -n chainsaw-login-params
              sleep 7
        - script:
            content: |
              hurl --error-format long --insecure --test test-auth-details.hurl
